<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mapview"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/bottom_navigation_menu_mapview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/listview"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/bottom_navigation_menu_listview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/workmates"
        android:enabled="true"
        android:icon="@drawable/workmates"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>